--- a/podcasts.mdwn
+++ b/podcasts.mdwn
@@ -1,3 +1,5 @@
+"I believe that when we die, we all become podcasts." --Conan O'Brien at https://twitter.com/ConanOBrien/status/929795985504653314
+
 http://podcasts.greptilian.com
 
 [[!map pages=podcasts/*]]
