--- a/conferences/libreplanet/2018.mdwn
+++ b/conferences/libreplanet/2018.mdwn
@@ -1,4 +1,4 @@
-https://media.libreplanet.org/u/libreplanet/m/sharing-strategies-for-welcoming-newcomers-into-floss-projects-first-timers-only-list-moderation-and-more/ is about making it easier for people to contribute to open source. The talk is sort of a walk through of https://publiclab.org/wiki/software-outreach
+https://media.libreplanet.org/u/libreplanet/m/sharing-strategies-for-welcoming-newcomers-into-floss-projects-first-timers-only-list-moderation-and-more/ is about making it easier for people to contribute to open source. The talk is sort of a walk through of https://publiclab.org/wiki/software-outreach . You can find the slides at https://publiclab.org/notes/warren/03-22-2018/libreplanet-talk-sharing-strategies-for-welcoming-newcomers-into-floss-projects-first-timers-only-list-moderation-and-more
 
 https://media.libreplanet.org/u/libreplanet/m/free-software-and-the-shifting-landscape-of-online-cooperation/ is about Mako's concerns over how proprietary is using free software techniques. Slides at https://media.libreplanet.org/u/libreplanet/m/free-software-and-the-shifting-landscape-of-online-cooperation-a311/
 
