--- a/teaching-kids-to-code.mdwn
+++ b/teaching-kids-to-code.mdwn
@@ -1,4 +1,4 @@
-I've been teaching my kids how to code on and off since they were six. At a young age, it's better to think of it as creating animations using [[Scratch]] or similar. The older they get and they more they're already playing games, they'll be better at making games.
+I've been teaching my kids how to code on and off since they were six. At a young age, it's better to think of it as creating animations using [[Scratch]] or similar. As they get older they can transition from making animations to making games.
 
 A good way to start is with [[code.org]].
 
