add missing period

--- a/talks/2018/wholetale-reproducibility-and-dataverse.mdwn
+++ b/talks/2018/wholetale-reproducibility-and-dataverse.mdwn
@@ -12,7 +12,7 @@ On September 13, 2018 I gave a lightning talk call "Reproducibility and Datavers
 > 
 > This is the perfect venue to announce that we were recently awarded a grant from the Alfred P. Sloan Foundation. There's a blog post coming on this any day but I'm just going to read the title of the grant: Increasing Scientific Dataset Quality Through Reproducibility and Curation Tools and Targeted Services in Dataverse Repositories. To unpack that a little bit, what we're really doing is working on the tools side and the human side, the curation services side. I've put the four tools here that we are planning to integrate with: Code Ocean, Encapsulator, CoRe2, and Make Data Count.
 > 
-> On the curation side, part of the grant is trying to come up with a sustainable model for offering curation services from Harvard Dataverse. Right now it's free data hosting. We do some amount of curation, but we want to be able to offer some paid tiers. We're not promising this is going to be sustainable. We want to come up with a model that we think will work through a pilot program. I wanted to mention that the Dataverse community is really into this concept of data quality and data reuse and many installations are pursuing this CoreTrustSeal certification Tilburg was the first to announce to the Dataverse community that they've already achieved this certification.
+> On the curation side, part of the grant is trying to come up with a sustainable model for offering curation services from Harvard Dataverse. Right now it's free data hosting. We do some amount of curation, but we want to be able to offer some paid tiers. We're not promising this is going to be sustainable. We want to come up with a model that we think will work through a pilot program. I wanted to mention that the Dataverse community is really into this concept of data quality and data reuse and many installations are pursuing this CoreTrustSeal certification. Tilburg was the first to announce to the Dataverse community that they've already achieved this certification.
 > 
 > The Sloan grant covers stuff we're definitely on the hook for but meanwhile our community has their own ideas of what they want to do for computation and reproducibility so I thought I'd just mention three right here. We have a researcher at Harvard Medical School who's about to launch his installation of Dataverse. He uses this "local data access path" config option where he can mount all the files from his Dataverse to right in his cluster. So he can just tell his researchers to "cd" to this NFS mount and go crazy with the data. There's a ton of excitement about Jupyter notebooks and there is a group a UC Berkeley who we've been talking to who want to add a "launch in Binder" button, sort of similar to what we heard earlier about the "launch in Whole Tale" where you enter a DOI and then would be able to play around with the data in a Jupyter notebook. And then, this last one, there were some students at BU this last semester who were playing around with integrating Dataverse with Spark, which was really exciting.
 > 
