weechat setup tweaks

--- a/weechat.mdwn
+++ b/weechat.mdwn
@@ -11,7 +11,8 @@ Originally tested on weechat 0.4.2, now using 1.9.1.
     /set weechat.look.hotlist_sort number_asc      
     /server add freenode chat.freenode.net
     /set irc.server.freenode.autojoin "##friendlyjava,#openknot"
-    /server add gitter irc.gitter.im/6667 -ssl -autoconnect -password=YOUR_TOKEN_HERE
+    /server add gitter irc.gitter.im/6667 -ssl -password=YOUR_TOKEN_HERE
+    /set weechat.bar.buflist.size_max 22
     /ignore add gitter
     /save
 
