--- a/ubuntu.mdwn
+++ b/ubuntu.mdwn
@@ -123,3 +123,9 @@ Show enabled sites
     sudo apt-get install mysql-server
 
 https://www.digitalocean.com/community/tutorials/a-basic-mysql-tutorial
+
+## Timezone
+
+    sudo timedatectl set-timezone America/New_York
+
+https://www.digitalocean.com/community/tutorials/how-to-set-up-time-synchronization-on-ubuntu-18-04
