--- a/hivehacker.club.mdwn
+++ b/hivehacker.club.mdwn
@@ -27,3 +27,11 @@ Making the logo for http://hivehacker.club
     eeeeeeeeeeeeeeeeeeevh  ieeeeeeeeeeeeeeeeeee
     eeeeeeeeeeeeeeeeeeeevhveeeeeeeeeeeeeeeeeeee
     eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
+
+Making pixel art
+
+- https://www.piskelapp.com https://github.com/piskelapp/piskel
+
+Game inspiration
+
+- https://www.emanueleferonato.com/2017/07/08/the-basics-behind-jumping-on-enemies-feature-explained-with-phaser-and-arcade-physics/
