--- a/gitter.mdwn
+++ b/gitter.mdwn
@@ -1,1 +1,3 @@
-Gitter roadmap: https://gitlab.com/groups/gitlab-org/-/roadmap?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=Gitter&layout=QUARTERS via https://gitter.im/gitterHQ/contributing?at=5bd78c3d23d0ad2547912cb4
+[Gitter roadmap][] via https://gitter.im/gitterHQ/contributing?at=5bd78c3d23d0ad2547912cb4
+
+[Gitter roadmap]: https://gitlab.com/groups/gitlab-org/-/roadmap?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=Gitter&layout=QUARTERS
