add turkey-yum, flies-are-awful, animated gifs

--- a/hivehacker.club.mdwn
+++ b/hivehacker.club.mdwn
@@ -36,6 +36,6 @@ Game inspiration
 
 - https://www.emanueleferonato.com/2017/07/08/the-basics-behind-jumping-on-enemies-feature-explained-with-phaser-and-arcade-physics/
 
-Sprites
+Sprites and animated gifs
 
 [[!map pages=hivehacker.club/*/*]]
