--- a/gitter.mdwn
+++ b/gitter.mdwn
@@ -2,6 +2,8 @@
 
 [Gitter roadmap]: https://gitlab.com/groups/gitlab-org/-/roadmap?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=Gitter&layout=QUARTERS
 
+"Self hosted Gitter enterprise" is not on the roadmap. At https://gitter.im/gitterHQ/gitter/archives/2018/12/03 I was told, "We are focused on the SaaS experience, gitter.im. Self installations is not a route we plan to support but people are free to run their own. There have been a few people who have jumped into it and used the Docker-ized development version... You can track https://gitlab.com/gitlab-org/gitter/webapp/issues/254 "
+
 The issue that's driving me the most crazy is that from IRC I can't see who's in the room so it's extra difficult to @mention people. It seems like the issue to work on is this one: https://gitlab.com/gitlab-org/gitter/irc-bridge/issues/52 .
 
 When I asked, "Is there a way to get a sense of which rooms on Gitter are somewhat active?" I was linked to https://gitlab.com/gitlab-org/gitter/webapp/issues/262
