--- a/talks/2018/wholetale-reproducibility-and-dataverse.mdwn
+++ b/talks/2018/wholetale-reproducibility-and-dataverse.mdwn
@@ -1,4 +1,4 @@
-On September 13, 2018 I gave a lightning talk call "Reproducibility and Dataverse" at the [Whole Tale Workshop on Tools and Approaches for Publishing Reproducible Research](https://wholetale.org/2018/06/26/working-group-workshop.html). You can watch the talk at https://www.youtube.com/watch?v=SuyQTsOGugc look at the slides at https://www.slideshare.net/philipdurbin/reproducibility-and-dataverse and read the transcript below:
+On September 13, 2018 I gave a lightning talk called "Reproducibility and Dataverse" at the [Whole Tale Workshop on Tools and Approaches for Publishing Reproducible Research](https://wholetale.org/2018/06/26/working-group-workshop.html). You can watch the talk at https://www.youtube.com/watch?v=SuyQTsOGugc look at the slides at https://www.slideshare.net/philipdurbin/reproducibility-and-dataverse and read the transcript below:
 
 > Hi. My name is Philip Durbin and I've been a developer for Dataverse for almost six years and since this is a computational crowd I'll mention that the prior six years to that I worked in research computing environments so I helped researchers with scheduling systems like Condor, Slurm, and LSF. I'm from Columbus, Ohio, home of the Ohio State Buckeyes, so I'm excited to be here in the Big Ten Center. Thanks for inviting me.
 > 
