--- a/python.mdwn
+++ b/python.mdwn
@@ -21,3 +21,7 @@ http://www.ibm.com/developerworks/aix/library/au-pythocli/
 http://docs.python.org/2/faq/general#why-was-python-created-in-the-first-place
 
 http://svn.python.org/projects/python/branches/cnri-16-start/Misc/BLURB.LUTZ
+
+## Misc
+
+https://snarky.ca/deconstructing-xkcd-com-1987/
