add Searchable Linkable Open Public Indexed (SLOPI) Communication

--- a/ideas.mdwn
+++ b/ideas.mdwn
@@ -1,3 +1,5 @@
+**SLOPI** (pronounced "sloppy") is short for Searchable Linkable Open Public Indexed, a style of communication I recommend for open source projects: https://github.com/good-labs/slopi-communication
+
 **Feedcritic** helps you keep track of the many podcasts you're subscribed to and choose which episodes to listen to. I'm playing around with code at https://github.com/pdurbin/feedcritic (includes screenshots) which has been deployed to http://podcasts.greptilian.com
 
 **Pastries** is a quick and dirty HTML5 game that could be cleaned up and used in a tutorial for kids writing their own games: https://github.com/pdurbin/pastries
